force-app/main/default/objects/KDCE_Order__c/KDCE_Order__c.object-meta.xml
<CustomObject>
    <description>[KDCE] Order</description>
    <label>Order</label>
    <nameField>
        <displayFormat>KO{YY}{MM}{DD}{000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>