force-app/main/default/objects/KDCE_Order__c/fields/ActionChannel__c.field-meta.xml
<CustomField>
    <fullName>ActionChannel__c</fullName>
    <description>Order Action Channel</description>
    <label>Action Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>iqos.com</fullName>
            </value>
            <value>
                <fullName>POS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>