force-app/main/default/objects/KDCE_Order__c/fields/CollectionStartDate__c.field-meta.xml
<CustomField>
    <fullName>CollectionStartDate__c</fullName>
    <label>Collection Start Date</label>
    <type>DateTime</type>
</CustomField>