force-app/main/default/objects/KDCE_Order__c/fields/CollectionStatusDate__c.field-meta.xml
<CustomField>
    <fullName>CollectionStatusDate__c</fullName>
    <description>(IF) 추심 상태값 들어올때, 같이 들어오는 Date</description>
    <label>Collection Status Date</label>
    <type>DateTime</type>
</CustomField>