force-app/main/default/objects/KDCE_Order__c/fields/Coupon__c.field-meta.xml
<CustomField>
    <fullName>Coupon__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Applied Coupon</description>
    <inlineHelpText>Applied Coupon</inlineHelpText>
    <label>Coupon</label>
    <referenceTo>KDCE_Coupon__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>