force-app/main/default/objects/KDCE_Order__c/fields/CouponCode__c.field-meta.xml
<CustomField>
    <fullName>CouponCode__c</fullName>
    <description>[KDCE] 쿠폰 코드
Mapping Column : coupon_code</description>
    <inlineHelpText>쿠폰 코드</inlineHelpText>
    <label>Coupon Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>