force-app/main/default/objects/KDCE_Order__c/fields/fm_OrderDate__c.field-meta.xml
<CustomField>
    <fullName>fm_OrderDate__c</fullName>
    <formula>DATEVALUE(OrderDate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Date</label>
    <type>Date</type>
</CustomField>