force-app/main/default/objects/KDCE_Order__c/fields/isTargetPurchaseDateUpdate__c.field-meta.xml
<CustomField>
    <fullName>isTargetPurchaseDateUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Order Insert 시, Purchase Date 업데이트를 하기 위한 필드</description>
    <label>isTargetPurchaseDateUpdate</label>
    <type>Checkbox</type>
</CustomField>