force-app/main/default/objects/KDCE_Order__c/fields/OrderNo__c.field-meta.xml
<CustomField>
    <fullName>OrderNo__c</fullName>
    <description>[KDCE] 주문번호
Mapping Column : order_no</description>
    <externalId>true</externalId>
    <inlineHelpText>주문번호</inlineHelpText>
    <label>Order No</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>