force-app/main/default/objects/KDCE_Order__c/fields/OrderState__c.field-meta.xml
<CustomField>
    <fullName>OrderState__c</fullName>
    <description>Order State (주문 상태 2)</description>
    <label>Order State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>approved</fullName>
            </value>
            <value>
                <fullName>authorized</fullName>
            </value>
            <value>
                <fullName>canceled</fullName>
            </value>
            <value>
                <fullName>closed</fullName>
            </value>
            <value>
                <fullName>complete</fullName>
            </value>
            <value>
                <fullName>delivered</fullName>
            </value>
            <value>
                <fullName>pending</fullName>
            </value>
            <value>
                <fullName>process and close</fullName>
            </value>
            <value>
                <fullName>processed</fullName>
            </value>
            <value>
                <fullName>processing​</fullName>
            </value>
            <value>
                <fullName>received</fullName>
            </value>
            <value>
                <fullName>requested</fullName>
            </value>
            <value>
                <fullName>returned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>