force-app/main/default/objects/KDCE_Order__c/fields/OrderType__c.field-meta.xml
<CustomField>
    <fullName>OrderType__c</fullName>
    <description>[KDCE] 주문타입
ZTA(일반주문)
ZTI(보상판매)
ZRN(렌탈 중고)
ZRNNEW(렌탈 신규)
ZRA(QURE)</description>
    <inlineHelpText>주문타입</inlineHelpText>
    <label>Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ZTA</fullName>
            </value>
            <value>
                <fullName>ZTI</fullName>
            </value>
            <value>
                <fullName>ZRN</fullName>
            </value>
            <value>
                <fullName>ZRNNEW</fullName>
            </value>
            <value>
                <fullName>ZRA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>