force-app/main/default/objects/KDCE_Order__c/fields/OriginOrder__c.field-meta.xml
<CustomField>
    <fullName>OriginOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Original Order (반품/취소의 경우)</description>
    <inlineHelpText>Original Order (반품/취소의 경우)</inlineHelpText>
    <label>Original Order</label>
    <referenceTo>KDCE_Order__c</referenceTo>
    <relationshipLabel>Sub Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>