force-app/main/default/objects/KDCE_Order__c/fields/OriginOrderNo__c.field-meta.xml
<CustomField>
    <fullName>OriginOrderNo__c</fullName>
    <description>Used when finding Original Number of the Order (i.g. In case of Return)</description>
    <label>Origin Order No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>