force-app/main/default/objects/KDCE_Order__c/fields/PaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>PaymentMethod__c</fullName>
    <description>[KDCE] 지불수단
Mapping Column : payment_method</description>
    <inlineHelpText>지불수단</inlineHelpText>
    <label>Payment Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>