force-app/main/default/objects/KDCE_Order__c/fields/PaymentTransactionId__c.field-meta.xml
<CustomField>
    <fullName>PaymentTransactionId__c</fullName>
    <description>[KDCE] 거래승인 ID
Mapping Column : payment_transaction_id</description>
    <inlineHelpText>거래승인 ID</inlineHelpText>
    <label>Payment Transaction Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>