force-app/main/default/objects/KDCE_Order__c/fields/RentalId__c.field-meta.xml
<CustomField>
    <fullName>RentalId__c</fullName>
    <description>주문유형이 렌탈일 경우 Id</description>
    <label>Rental Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>