force-app/main/default/objects/KDCE_Order__c/fields/RentalStartDate__c.field-meta.xml
<CustomField>
    <fullName>RentalStartDate__c</fullName>
    <description>[KDCE] 렌탈 시작일 (주문유형 렌탈일 경우만 존재)</description>
    <label>Rental Start Date</label>
    <type>Date</type>
</CustomField>