force-app/main/default/objects/KDCE_Order__c/fields/RentalStatus__c.field-meta.xml
<CustomField>
    <fullName>RentalStatus__c</fullName>
    <description>[KDCE] 렌탈 상태 (주문유형이 렌탈일 경우만 존재)</description>
    <label>Rental Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Rental</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Cancel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>