force-app/main/default/objects/KDCE_Order__c/fields/ReturnEndDate__c.field-meta.xml
<CustomField>
    <fullName>ReturnEndDate__c</fullName>
    <description>[IF] 회수 종료일</description>
    <label>Return End Date</label>
    <type>Date</type>
</CustomField>