force-app/main/default/objects/KDCE_Order__c/fields/ReturnStartDate__c.field-meta.xml
<CustomField>
    <fullName>ReturnStartDate__c</fullName>
    <description>[IF] 회수 시작 날짜</description>
    <label>Return Start Date</label>
    <type>Date</type>
</CustomField>