force-app/main/default/objects/KDCE_Order__c/fields/ru_ValidProductCount__c.field-meta.xml
<CustomField>
    <fullName>ru_ValidProductCount__c</fullName>
    <description>[KDCE] No Accessory Order Item Count</description>
    <label>Valid Product Count</label>
    <summaryFilterItems>
        <field>KDCE_OrderLineItem__c.IsDevice__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>KDCE_OrderLineItem__c.Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>