force-app/main/default/objects/KDCE_Order__c/fields/ShippingAddressName__c.field-meta.xml
<CustomField>
    <fullName>ShippingAddressName__c</fullName>
    <description>[KDCE] 수령고객 명
Mapping Column : shipping_address_name</description>
    <inlineHelpText>수령고객 명</inlineHelpText>
    <label>Shipping Address Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>