force-app/main/default/objects/KDCE_Order__c/fields/ShippingItemId__c.field-meta.xml
<CustomField>
    <fullName>ShippingItemId__c</fullName>
    <description>[KDCE] 배송방식
Mapping Column : shipping_item_id</description>
    <inlineHelpText>배송방식</inlineHelpText>
    <label>Shipping Item Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>