force-app/main/default/objects/KDCE_Order__c/fields/ShippingPhone__c.field-meta.xml
<CustomField>
    <fullName>ShippingPhone__c</fullName>
    <description>[KDCE] 배송지 전화번호
Mapping Column : shipping_phone</description>
    <inlineHelpText>배송지 전화번호</inlineHelpText>
    <label>Shipping Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>