force-app/main/default/objects/KDCE_Order__c/fields/ShippingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>ShippingPostalCode__c</fullName>
    <description>[KDCE] 배송지 우편번호
Mapping Column : shipping_postal_code</description>
    <inlineHelpText>배송지 우편번호</inlineHelpText>
    <label>Shipping Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>