force-app/main/default/objects/KDCE_Order__c/fields/ShippingStartDate__c.field-meta.xml
<CustomField>
    <fullName>ShippingStartDate__c</fullName>
    <label>Shipping Start Date</label>
    <type>Date</type>
</CustomField>