force-app/main/default/objects/KDCE_Order__c/fields/ShipStatusDate__c.field-meta.xml
<CustomField>
    <fullName>ShipStatusDate__c</fullName>
    <description>배송상태변경일자</description>
    <label>Ship Status Date</label>
    <type>DateTime</type>
</CustomField>