force-app/main/default/objects/KDCE_Order__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Store name of where order transaction is occurred</description>
    <label>Store</label>
    <referenceTo>KDCE_Store__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>