force-app/main/default/objects/KDCE_Order__c/fields/SupplyPrice__c.field-meta.xml
<CustomField>
    <fullName>SupplyPrice__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>공급가액</inlineHelpText>
    <label>Supply Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>