force-app/main/default/objects/KDCE_Order__c/fields/Tax__c.field-meta.xml
<CustomField>
    <fullName>Tax__c</fullName>
    <defaultValue>0</defaultValue>
    <description>[KDCE] Tax
Mapping Column : tax</description>
    <inlineHelpText>Tax</inlineHelpText>
    <label>Tax</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>