force-app/main/default/objects/KDCE_Order__c/fields/TaxBasis__c.field-meta.xml
<CustomField>
    <fullName>TaxBasis__c</fullName>
    <description>[KDCE] 세액기준 계
Mapping Column : tax_basis</description>
    <inlineHelpText>세액기준 계</inlineHelpText>
    <label>Tax Basis</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>