force-app/main/default/objects/KDCE_Order__c/recordTypes/Order_NORMAL.recordType-meta.xml
<RecordType>
    <fullName>Order_NORMAL</fullName>
    <active>true</active>
    <label>NORMAL</label>
</RecordType>