force-app/main/default/objects/KDCE_Order__c/recordTypes/Order_ON.recordType-meta.xml
<RecordType>
    <fullName>Order_ON</fullName>
    <active>true</active>
    <label>IQOS ON</label>
</RecordType>