force-app/main/default/objects/KDCE_Order__c/recordTypes/Order_RENTAL.recordType-meta.xml
<RecordType>
    <fullName>Order_RENTAL</fullName>
    <active>true</active>
    <label>RENTAL</label>
</RecordType>