force-app/main/default/objects/KDCE_Order__c/recordTypes/Order_REPLACE.recordType-meta.xml
<RecordType>
    <fullName>Order_REPLACE</fullName>
    <active>true</active>
    <label>REPLACE</label>
</RecordType>