force-app/main/default/objects/KDCE_Order__c/recordTypes/Order_TRADEIN.recordType-meta.xml
<RecordType>
    <fullName>Order_TRADEIN</fullName>
    <active>true</active>
    <label>TRADEIN</label>
</RecordType>