force-app/main/default/objects/KDCE_Order__c/recordTypes/Order_UP.recordType-meta.xml
<RecordType>
    <fullName>Order_UP</fullName>
    <active>true</active>
    <label>IQOS UP</label>
</RecordType>