force-app/main/default/objects/KDCE_Order__c/recordTypes/Order_UPGRADE.recordType-meta.xml
<RecordType>
    <fullName>Order_UPGRADE</fullName>
    <active>true</active>
    <label>UPGRADE</label>
</RecordType>