force-app/main/default/objects/KDCE_Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OrderNo__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>OrderDate__c</columns>
    <columns>OrderType__c</columns>
    <columns>OrderReason__c</columns>
    <columns>OrderStatus__c</columns>
    <columns>Contact__c</columns>
    <columns>CustomerId__c</columns>
    <columns>CouponCode__c</columns>
    <columns>Coupon__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ReturnStartDate__c</field>
        <operation>greaterOrEqual</operation>
        <value>7/1/2021</value>
    </filters>
    <label>All</label>
</ListView>