force-app/main/default/objects/KDCE_Order__c/listViews/MagentoOrder.listView-meta.xml
<ListView>
    <fullName>MagentoOrder</fullName>
    <columns>NAME</columns>
    <columns>OrderNo__c</columns>
    <columns>OrderDate__c</columns>
    <columns>OrderType__c</columns>
    <columns>OrderReason__c</columns>
    <columns>OrderStatus__c</columns>
    <columns>Contact__c</columns>
    <columns>CustomerId__c</columns>
    <columns>CouponCode__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ActionChannel__c</field>
        <operation>equals</operation>
        <value>iqos.com</value>
    </filters>
    <label>Magento Order</label>
</ListView>