force-app/main/default/objects/KDCE_Order__c/listViews/POSOrder.listView-meta.xml
<ListView>
    <fullName>POSOrder</fullName>
    <columns>NAME</columns>
    <columns>OrderNo__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>OrderDate__c</columns>
    <columns>OrderType__c</columns>
    <columns>OrderReason__c</columns>
    <columns>OrderStatus__c</columns>
    <columns>Contact__c</columns>
    <columns>CustomerId__c</columns>
    <columns>CouponCode__c</columns>
    <columns>Coupon__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ActionChannel__c</field>
        <operation>equals</operation>
        <value>POS</value>
    </filters>
    <label>POS Order</label>
</ListView>